added multimedia sharing

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -417,3 +417,8 @@ body {
 #search-results li button:hover {
   background: #5b6eae;
 }
+
+/* Additional styles for file input */
+#file-input {
+  margin-right: 0.5rem;
+}
